<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPadding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_Item_name_and_details"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/item_name_and_details"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toTopOf="@+id/imageView5" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/favourite_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5"
                        app:srcCompat="@drawable/ic_heart"
                        app:tint="@color/colorOrange" />

                    <EditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="50dp"
                        android:layout_height="0dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:inputType="number"
                        android:textColor="@color/text"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
                        app:layout_constraintEnd_toStartOf="@+id/imageView11"
                        app:layout_constraintTop_toTopOf="@+id/imageView11" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="16dp"
                        android:contentDescription="@string/delete_icon"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
                        app:layout_constraintStart_toEndOf="@+id/imageView7"
                        app:layout_constraintTop_toTopOf="@+id/imageView7"
                        app:srcCompat="@android:drawable/ic_menu_delete"
                        app:tint="@color/colorOrange" />

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:contentDescription="@string/subtract"
                        app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
                        app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
                        app:layout_constraintTop_toTopOf="@+id/editTextNumber"
                        app:srcCompat="@drawable/ic_minus"
                        app:tint="@color/colorOrange" />

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_item_price"
                        app:srcCompat="@drawable/ic_plus"
                        app:tint="@color/colorOrange" />

                    <TextView
                        android:id="@+id/tv_item_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/item_price"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                        app:layout_constraintEnd_toEndOf="@+id/tv_Item_name_and_details"
                        app:layout_constraintStart_toStartOf="@+id/tv_Item_name_and_details" />

                    <TextView
                        android:id="@+id/text_view_remove"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:gravity="center"
                        android:text="@string/remove"
                        android:textAllCaps="true"
                        android:textColor="@color/colorOrange"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                        app:layout_constraintStart_toEndOf="@+id/imageView9"
                        app:layout_constraintTop_toTopOf="@+id/imageView9" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/item_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@tools:sample/avatars" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>