<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/text_view_enter_otp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/enter_otp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edit_text_enter_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/enter_the_otp_sent_to_you"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_enter_otp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_verify_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/verify_otp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_enter_otp"
        app:rippleColor="@color/design_default_color_error" />

    <TextView
        android:id="@+id/text_view_otp_information"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_verify_otp" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_verify_otp"
        app:layout_constraintStart_toEndOf="@+id/button_verify_otp"
        app:layout_constraintTop_toTopOf="@+id/button_verify_otp" />
</androidx.constraintlayout.widget.ConstraintLayout>